añadir propiedades por raza segun un enum
